# pipewire-vmic

./: README.md  audio.py  cache.py  main.py  pyproject.toml  tts_provider.py  vmic.py
scripts/: install-gpu.sh  setup-vmic.sh  teardown-vmic.sh
ttsspeaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
