[project]
name = "ttsspeaker"
version = "0.1.0"
description = "TTS CLI — text-to-speech with speaker/virtual-mic/file output"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "edge-tts>=7.2.8",
    "platformdirs>=4.10.0",
]

[project.scripts]
ttsspeaker = "main:main"

[tool.setuptools]
py-modules = ["main", "cache", "tts_provider", "audio", "vmic"]
