[project]
name = "ttsspeaker"
version = "0.1.0"
description = "TTS CLI — text-to-speech with speaker/virtual-mic/file output"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "edge-tts>=7.2.8",
    "onnxruntime-gpu>=1.27.0",
    "piper-tts>=1.4.2",
    "platformdirs>=4.10.0",
    "supertonic>=1.3.1",
]

[project.scripts]
ttsspeaker = "main:main"

[tool.setuptools]
py-modules = ["main", "cache", "tts_provider", "audio", "vmic"]
